--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   <style>
     body { margin: 0; }
     #map { height: 100vh; }
+
+    /* 🔥 Animación de territorios fuertes */
+    .strong {
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0% { opacity: 0.6; }
+      50% { opacity: 0.95; }
+      100% { opacity: 0.6; }
+    }
   </style>
 </head>
 <body>
@@ -20,36 +31,120 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="https://unpkg.com/h3-js@4.1.0/dist/h3-js.umd.js"></script>
+<script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
 
 <script>
   const BACKEND_URL = "https://dominion-backend-production.up.railway.app";
 
-  const map = L.map("map").setView([40.4168, -3.7038], 13); // Madrid default
+  const map = L.map("map").setView([0, 0], 2);
 
   L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
     attribution: "© OpenStreetMap"
   }).addTo(map);
 
-  fetch(`${BACKEND_URL}/territories`)
-    .then(res => res.json())
-    .then(data => {
-      data.forEach(t => {
-        const boundary = h3.cellToBoundary(t.territory_id, true);
+  /* ===============================
+     🎨 Color consistente por usuario
+     =============================== */
+  function colorFromUser(userId) {
+    let hash = 0;
+    for (let i = 0; i < userId.length; i++) {
+      hash = userId.charCodeAt(i) + ((hash << 5) - hash);
+    }
+    const hue = Math.abs(hash) % 360;
+    return `hsl(${hue}, 70%, 50%)`;
+  }
 
-        const polygon = boundary.map(p => [p[1], p[0]]);
+  let territoryLayer = L.layerGroup().addTo(map);
+  let heatLayer = null;
 
-        L.polygon(polygon, {
-          color: "red",
-          fillOpacity: Math.min(0.8, t.influence / 10)
-        })
-        .bindPopup(`
-          <b>Territory</b><br/>
-          User: ${t.user_id}<br/>
-          Influence: ${t.influence}
-        `)
-        .addTo(map);
+  /* ===============================
+     🧠 H3 resolution según zoom
+     =============================== */
+  function resolutionFromZoom(zoom) {
+    if (zoom < 9) return 7;
+    if (zoom < 12) return 8;
+    if (zoom < 15) return 9;
+    return 10;
+  }
+
+  /* ===============================
+     🔄 Cargar territorios
+     =============================== */
+  function loadTerritories() {
+    const zoom = map.getZoom();
+    const resolution = resolutionFromZoom(zoom);
+
+    territoryLayer.clearLayers();
+    if (heatLayer) {
+      map.removeLayer(heatLayer);
+      heatLayer = null;
+    }
+
+    fetch(`${BACKEND_URL}/territories?resolution=${resolution}`)
+      .then(res => res.json())
+      .then(data => {
+        console.log("Territories:", data);
+
+        if (!data.length) return;
+
+        const allLatLngs = [];
+        const heatPoints = [];
+
+        data.forEach(t => {
+          const boundary = h3.cellToBoundary(t.territory_id, true);
+
+          const polygon = boundary.map(p => {
+            const latlng = [p[1], p[0]];
+            allLatLngs.push(latlng);
+            return latlng;
+          });
+
+          const color = colorFromUser(t.owner);
+
+          const poly = L.polygon(polygon, {
+            color,
+            weight: 2,
+            fillColor: color,
+            fillOpacity: Math.min(0.9, t.influence / 5)
+          })
+          .bindPopup(`
+            <b>Territory</b><br/>
+            Owner: ${t.owner}<br/>
+            Influence: ${t.influence}
+          `);
+
+          // ✨ Animación para territorios dominantes
+          poly.on("add", () => {
+            if (t.influence >= 5) {
+              poly.getElement()?.classList.add("strong");
+            }
+          });
+
+          poly.addTo(territoryLayer);
+
+          // 🔥 Heatmap
+          const [lat, lng] = h3.cellToLatLng(t.territory_id);
+          heatPoints.push([lat, lng, t.influence]);
+        });
+
+        heatLayer = L.heatLayer(heatPoints, {
+          radius: 30,
+          blur: 20,
+          maxZoom: 17
+        }).addTo(map);
+
+        map.fitBounds(allLatLngs);
+      })
+      .catch(err => {
+        console.error("Error loading territories", err);
       });
-    });
+  }
+
+  // 🔁 Reload when zoom changes
+  map.on("zoomend", loadTerritories);
+
+  // 🚀 Initial load
+  loadTerritories();
 </script>
 
 </body>
