--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
 
 <script>
+  console.log("Dominion map v1.0.3");
   const BACKEND_URL = "https://dominion-backend-production.up.railway.app";
 
   const map = L.map("map").setView([0, 0], 2);
