--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       heatLayer = null;
     }
 
-    fetch(`${BACKEND_URL}/territories?resolution=${resolution}`)
+    fetch("https://dominion-backend-production.up.railway.app/territories?resolution=" + resolution)
       .then(res => res.json())
       .then(data => {
         console.log("Territories:", data);
