--- a/dashboard.html
+++ b/dashboard.html
@@ -179,9 +179,28 @@
   loadTerritories();
 
   // 🔴 STRAVA CONNECT
-  function connectStrava() {
-    window.location.href = `${BACKEND_URL}/strava/connect`;
+  async function connectStrava() {
+    try {
+      const res = await fetch(`${BACKEND_URL}/strava/connect`, {
+        headers: {
+          Authorization: `Bearer ${token}`
+        }
+      });
+
+      if (!res.ok) {
+        alert("Not authenticated");
+        return;
+      }
+
+      const data = await res.json();
+      window.location.href = data.auth_url;
+
+    } catch (err) {
+      console.error(err);
+      alert("Error connecting Strava");
+    }
   }
+
 
   // 🚪 LOGOUT
   function logout() {
