--- a/index.html
+++ b/index.html
@@ -2,216 +2,213 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Dominion · Login</title>
+  <title>Dominion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Leaflet -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
 
   <style>
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: linear-gradient(135deg, #111, #222);
+      background: #111;
       color: #fff;
+    }
+
+    header {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      background: rgba(0,0,0,0.75);
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+      padding: 10px 16px;
+      box-sizing: border-box;
     }
 
-    .container {
-      width: 100%;
-      max-width: 380px;
-      padding: 24px;
-      background: #1a1a1a;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+    header h1 {
+      font-size: 1.1rem;
+      margin: 0;
     }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 8px;
-    }
-
-    p.subtitle {
-      text-align: center;
-      font-size: 0.9rem;
-      opacity: 0.8;
-      margin-bottom: 24px;
-    }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 12px;
-      border-radius: 8px;
-      border: none;
-      background: #2a2a2a;
-      color: #fff;
-      font-size: 1rem;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      border-radius: 8px;
-      border: none;
+    header button {
       background: #4caf50;
-      color: #000;
+      border: none;
+      padding: 6px 10px;
+      border-radius: 6px;
       font-weight: bold;
-      font-size: 1rem;
       cursor: pointer;
-      margin-top: 8px;
+      margin-left: 6px;
     }
 
-    button.secondary {
+    header button.secondary {
       background: transparent;
-      color: #4caf50;
-      border: 1px solid #4caf50;
+      color: #fff;
+      border: 1px solid #555;
     }
 
-    .toggle {
-      text-align: center;
-      margin-top: 16px;
-      font-size: 0.9rem;
-      cursor: pointer;
-      color: #4caf50;
-    }
-
-    .error {
-      margin-top: 12px;
-      color: #ff6b6b;
-      font-size: 0.9rem;
-      text-align: center;
+    #map {
+      height: 100vh;
+      width: 100%;
     }
   </style>
 </head>
 <body>
 
-<div class="container">
-  <h1>Dominion</h1>
-  <p class="subtitle">Conquer the world with your activities</p>
+<header>
+  <h1>🌍 Dominion</h1>
+  <div id="auth-buttons"></div>
+</header>
 
-  <!-- LOGIN FORM -->
-  <div id="login-form">
-    <input id="login-email" type="email" placeholder="Email" />
-    <input id="login-password" type="password" placeholder="Password" />
-    <button onclick="login()">Login</button>
+<div id="map"></div>
 
-    <div class="toggle" onclick="showRegister()">Create an account</div>
-  </div>
-
-  <!-- REGISTER FORM -->
-  <div id="register-form" style="display:none">
-    <input id="register-email" type="email" placeholder="Email" />
-    <input id="register-username" type="text" placeholder="Username" />
-    <input id="register-password" type="password" placeholder="Password" />
-    <button onclick="register()">Register</button>
-
-    <button class="secondary" onclick="showLogin()">Back to login</button>
-  </div>
-
-  <div id="error" class="error"></div>
-</div>
+<!-- Scripts -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/h3-js@4.1.0/dist/h3-js.umd.js"></script>
+<script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
 
 <script>
-  const BACKEND_URL = "https://dominion-backend-production.up.railway.app";
+  console.log("Dominion map v1.1");
 
-  // 🔄 Toggle forms
-  function showRegister() {
-    document.getElementById("login-form").style.display = "none";
-    document.getElementById("register-form").style.display = "block";
-    clearError();
+  const BACKEND_URL = "https://dominion-backend-production.up.railway.app";
+  const token = localStorage.getItem("token");
+  const isAuthenticated = !!token;
+
+  /* ===============================
+     🔐 Header buttons
+     =============================== */
+  const authButtons = document.getElementById("auth-buttons");
+
+  if (!isAuthenticated) {
+    authButtons.innerHTML = `
+      <button onclick="showLogin()">Login</button>
+      <button class="secondary" onclick="showRegister()">Register</button>
+    `;
+  } else {
+    authButtons.innerHTML = `
+      <button onclick="goProfile()">Profile</button>
+      <button class="secondary" onclick="logout()">Logout</button>
+    `;
+  }
+
+  function goProfile() {
+    window.location.href = "profile.html";
+  }
+
+  function logout() {
+    localStorage.removeItem("token");
+    window.location.reload();
   }
 
   function showLogin() {
-    document.getElementById("register-form").style.display = "none";
-    document.getElementById("login-form").style.display = "block";
-    clearError();
+    alert("Implementa aquí tu modal de login 😉\n(backend ya está listo)");
   }
 
-  function showError(msg) {
-    document.getElementById("error").innerText = msg;
+  function showRegister() {
+    alert("Implementa aquí tu modal de registro 😉");
   }
 
-  function clearError() {
-    document.getElementById("error").innerText = "";
+  /* ===============================
+     🌍 Map init
+     =============================== */
+  const map = L.map("map").setView([40.4168, -3.7038], 4);
+
+  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+    attribution: "© OpenStreetMap"
+  }).addTo(map);
+
+  let territoryLayer = L.layerGroup().addTo(map);
+  let heatLayer = null;
+
+  function colorFromUser(userId) {
+    let hash = 0;
+    for (let i = 0; i < userId.length; i++) {
+      hash = userId.charCodeAt(i) + ((hash << 5) - hash);
+    }
+    const hue = Math.abs(hash) % 360;
+    return `hsl(${hue}, 70%, 50%)`;
   }
 
-  // 🔐 LOGIN
-  async function login() {
-    clearError();
+  function resolutionFromZoom(zoom) {
+    if (zoom < 8) return 7;
+    if (zoom < 11) return 8;
+    if (zoom < 14) return 9;
+    return 10;
+  }
 
-    const email = document.getElementById("login-email").value;
-    const password = document.getElementById("login-password").value;
+  async function loadTerritories() {
+    const resolution = resolutionFromZoom(map.getZoom());
 
-    if (!email || !password) {
-      showError("Please fill all fields");
-      return;
+    territoryLayer.clearLayers();
+    if (heatLayer) {
+      map.removeLayer(heatLayer);
+      heatLayer = null;
     }
 
-    const formData = new URLSearchParams();
-    formData.append("username", email);
-    formData.append("password", password);
+    const headers = isAuthenticated
+      ? { Authorization: `Bearer ${token}` }
+      : {};
 
     try {
-      const res = await fetch(`${BACKEND_URL}/auth/login`, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/x-www-form-urlencoded"
-        },
-        body: formData
-      });
+      const res = await fetch(
+        `${BACKEND_URL}/territories?resolution=${resolution}`,
+        { headers }
+      );
 
       const data = await res.json();
+      if (!Array.isArray(data)) return;
 
-      if (!res.ok) {
-        showError(data.detail || "Login failed");
-        return;
-      }
+      const heatPoints = [];
 
-      localStorage.setItem("token", data.access_token);
-      window.location.href = "dashboard.html";
+      data.forEach(t => {
+        const boundary = h3.cellToBoundary(t.territory_id, true);
+        const polygon = boundary.map(p => [p[1], p[0]]);
+        const color = colorFromUser(t.owner);
+
+        const popupContent = isAuthenticated
+          ? `
+              <b>Territory</b><br/>
+              Owner: ${t.owner}<br/>
+              Influence: ${t.influence}
+            `
+          : `
+              <b>Territory</b><br/>
+              Owner: *****<br/>
+              Influence: ${Math.min(t.influence, 3)}+
+            `;
+
+        L.polygon(polygon, {
+          color,
+          weight: 2,
+          fillColor: color,
+          fillOpacity: Math.min(0.9, t.influence / 5)
+        })
+        .bindPopup(popupContent)
+        .addTo(territoryLayer);
+
+        const [lat, lng] = h3.cellToLatLng(t.territory_id);
+        heatPoints.push([lat, lng, t.influence]);
+      });
+
+      heatLayer = L.heatLayer(heatPoints, {
+        radius: 30,
+        blur: 20,
+        maxZoom: 17
+      }).addTo(map);
 
     } catch (err) {
-      showError("Network error");
+      console.error("Error loading territories", err);
     }
   }
 
-  // 🆕 REGISTER
-  async function register() {
-    clearError();
-
-    const email = document.getElementById("register-email").value;
-    const username = document.getElementById("register-username").value;
-    const password = document.getElementById("register-password").value;
-
-    if (!email || !username || !password) {
-      showError("Please fill all fields");
-      return;
-    }
-
-    try {
-      const res = await fetch(`${BACKEND_URL}/auth/register`, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ email, username, password })
-      });
-
-      const data = await res.json();
-
-      if (!res.ok) {
-        showError(data.detail || "Register failed");
-        return;
-      }
-
-      localStorage.setItem("token", data.access_token);
-      window.location.href = "dashboard.html";
-
-    } catch (err) {
-      showError("Network error");
-    }
-  }
+  map.on("zoomend", loadTerritories);
+  loadTerritories();
 </script>
 
 </body>
