--- a/profile.html
+++ b/profile.html
@@ -15,62 +15,45 @@
     }
 
     h1 {
-      margin-top: 0;
+      font-size: 1.4rem;
+      margin-bottom: 16px;
     }
 
     .card {
       background: #1a1a1a;
+      border: 1px solid #333;
       border-radius: 10px;
       padding: 16px;
       margin-bottom: 16px;
-      border: 1px solid #333;
     }
 
-    .row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 12px;
+    button {
+      background: #4caf50;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-right: 8px;
+    }
+
+    button.secondary {
+      background: transparent;
+      color: #fff;
+      border: 1px solid #555;
     }
 
     .status {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      font-weight: bold;
-    }
-
-    .dot {
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-    }
-
-    .green { background: #4caf50; }
-    .red { background: #f44336; }
-
-    button {
-      padding: 10px 14px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .primary {
-      background: #4caf50;
-      color: #000;
-    }
-
-    .secondary {
-      background: #333;
-      color: #fff;
-    }
-
-    .feedback {
-      margin-top: 12px;
+      margin-top: 8px;
       font-size: 0.9rem;
-      opacity: 0.9;
+    }
+
+    .green {
+      color: #4caf50;
+    }
+
+    .red {
+      color: #f44336;
     }
   </style>
 </head>
@@ -79,40 +62,15 @@
 <h1>👤 Profile</h1>
 
 <div class="card">
-  <div class="row">
-    <div>
-      <div><strong id="username">—</strong></div>
-      <div id="email" style="opacity:0.7">—</div>
-    </div>
-  </div>
+  <h3>Strava</h3>
+  <p id="strava-status" class="status">Checking status…</p>
+  <button onclick="connectStrava()">Connect Strava</button>
+  <button class="secondary" onclick="importActivities()">Import activities</button>
 </div>
 
 <div class="card">
-  <div class="row">
-    <div class="status">
-      <div id="strava-dot" class="dot red"></div>
-      <span id="strava-status">Strava not connected</span>
-    </div>
-    <button id="connect-btn" class="primary" onclick="connectStrava()">
-      Connect Strava
-    </button>
-  </div>
-
-  <div style="margin-top:12px">
-    <button
-      id="import-btn"
-      class="secondary"
-      onclick="importActivities()"
-      disabled
-    >
-      Import activities
-    </button>
-  </div>
-
-  <div id="feedback" class="feedback"></div>
+  <button class="secondary" onclick="goBack()">← Back to map</button>
 </div>
-
-<button onclick="goBack()" class="secondary">← Back to map</button>
 
 <script>
   const BACKEND_URL = "https://dominion-backend-production.up.railway.app";
@@ -122,30 +80,8 @@
     window.location.href = "index.html";
   }
 
-  const feedback = document.getElementById("feedback");
-
-  function setFeedback(msg) {
-    feedback.innerText = msg;
-  }
-
-  async function loadProfile() {
-    const res = await fetch(`${BACKEND_URL}/users/me`, {
-      headers: {
-        Authorization: `Bearer ${token}`
-      }
-    });
-
-    const user = await res.json();
-
-    document.getElementById("username").innerText = user.username;
-    document.getElementById("email").innerText = user.email;
-
-    if (user.strava_connected) {
-      document.getElementById("strava-dot").className = "dot green";
-      document.getElementById("strava-status").innerText = "Strava connected";
-      document.getElementById("connect-btn").style.display = "none";
-      document.getElementById("import-btn").disabled = false;
-    }
+  function goBack() {
+    window.location.href = "index.html";
   }
 
   async function connectStrava() {
@@ -160,8 +96,6 @@
   }
 
   async function importActivities() {
-    setFeedback("⏳ Importing activities…");
-
     const res = await fetch(`${BACKEND_URL}/strava/import`, {
       method: "POST",
       headers: {
@@ -170,24 +104,36 @@
     });
 
     const data = await res.json();
-
-    setFeedback(
-      `✅ Imported ${data.imported} activities · Skipped ${data.skipped}`
-    );
+    alert(`Imported: ${data.imported}\nSkipped: ${data.skipped}`);
   }
 
-  function goBack() {
-    window.location.href = "dashboard.html";
+  // 🔎 Check Strava status
+  async function checkStatus() {
+    try {
+      const res = await fetch(`${BACKEND_URL}/users/me`, {
+        headers: {
+          Authorization: `Bearer ${token}`
+        }
+      });
+
+      const user = await res.json();
+
+      const status = document.getElementById("strava-status");
+
+      if (user.strava_athlete_id) {
+        status.innerHTML = "🟢 Strava connected";
+        status.className = "status green";
+      } else {
+        status.innerHTML = "🔴 Strava not connected";
+        status.className = "status red";
+      }
+    } catch {
+      document.getElementById("strava-status").innerText =
+        "Unable to fetch user status";
+    }
   }
 
-  // 🔁 Init
-  loadProfile();
-
-  // 🎉 Feedback from callback
-  const params = new URLSearchParams(window.location.search);
-  if (params.get("strava") === "connected") {
-    setFeedback("✅ Strava connected successfully");
-  }
+  checkStatus();
 </script>
 
 </body>
