--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <img src="/logo.png" alt="Dominion logo" />
   <title>Dominion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -325,6 +326,10 @@
     <button class="secondary" onclick="closeModals()">Cancel</button>
   </div>
 </div>
-
+<footer>
+ <p>
+  © Dominion · <a href="/privacy.html">Privacy Policy</a> by Derriba Tus Limites SL
+ </p>
+</footer>
 </body>
 </html>
