--- a/profile.html
+++ b/profile.html
@@ -4,15 +4,7 @@
   <meta charset="UTF-8" />
   <title>Dominion · Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <div class="card">
-   <h3>📊 Your stats</h3>
-   <ul id="stats">
-     <li>Activities: …</li>
-     <li>Hexes conquered: …</li>
-     <li>Total influence: …</li>
-     <li>Last activity: …</li>
-   </ul>
-  </div>
+  
   <style>
     body {
       margin: 0;
@@ -88,6 +80,17 @@
 <div class="card">
   <h3>User info</h3>
   <div id="user-info" class="muted">Loading…</div>
+</div>
+
+<!-- USER STATS -->
+<div class="card">
+  <h3>📊 Your stats</h3>
+  <ul id="stats">
+    <li>Activities: …</li>
+    <li>Hexes conquered: …</li>
+    <li>Total influence: …</li>
+    <li>Last activity: …</li>
+  </ul>
 </div>
 
 <!-- STRAVA -->
