--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       top: 0;
       width: 100%;
       z-index: 1000;
-      background: rgba(0,0,0,0.75);
+      background: rgba(0,0,0,0.50);
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -99,7 +99,7 @@
 <body>
 
 <header>
-  <img src="/logo.png" alt="Dominion logo" />
+  <img src="logo.png" alt="Dominion logo" />
   <h1>🌍 Dominion</h1>
   <div id="auth-buttons"></div>
 </header>
@@ -328,7 +328,7 @@
 </div>
 <footer>
  <p>
-  © Dominion · <a href="/privacy.html">Privacy Policy</a> by Derriba Tus Limites SL
+  © Dominion · <a href="privacy.html">Privacy Policy</a> by Derriba Tus Limites SL
  </p>
 </footer>
 </body>
